--- a/program/program/program.vcxproj
+++ b/program/program/program.vcxproj
@@ -127,7 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="program.cpp" />
+    <ClCompile Include="Decode.cpp" />
+    <ClCompile Include="Display.cpp" />
+    <ClCompile Include="Fetch.cpp" />
+    <ClCompile Include="Program.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Decode.h" />
+    <ClInclude Include="Display.h" />
+    <ClInclude Include="Fetch.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="program.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
